# mcp-i14y

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  list_datasets_example.py  main.py  pyproject.toml
.claude/: settings.local.json
helpers/: core_api_client.py  env_config.py  i14y_api_client.py
tests/: test_agents.py  test_concepts.py  test_concepts_core.py  test_dataservices.py  test_datasets.py  test_distributions.py  test_health.py  test_i14y_api_client.py  test_mappingtables.py  test_publicservices.py  test_search.py  test_vocabularies.py
tools/: __init__.py  agents.py  catalogs.py  concepts.py  dataservices.py  datasets.py  distributions.py  mappingtables.py  publicservices.py  search.py  vocabularies.py
