[project]
name = "mcp-i14y"
version = "0.1.0"
description = "MCP server for the Swiss I14Y Interoperability Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.15"
keywords = ["mcp", "i14y", "switzerland", "opendata", "interoperability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp>=1.25.0,<2",
    "httpx>=0.28.0",
    "uvicorn>=0.34.0",
    "sentry-sdk>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/fgouzi/mcp-i14y"
Repository = "https://github.com/fgouzi/mcp-i14y"
Issues = "https://github.com/fgouzi/mcp-i14y/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require live I14Y API)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
